SCs-language-server/src/syntax/.antlr/scsParser.java
// Generated from c:\Users\ArtsemiVasileuski\Documents\WINK-vscode-extension\SCs-language-server\src\syntax\scs.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class scsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, ID_SYSTEM=24, 
		LINK=25, CONNECTOR=26, EDGE_ATTR=27, LINE_TERMINATOR=28, LINE_COMMENT=29, 
		MULTINE_COMMENT=30, WS=31;
	public static final int
		RULE_content = 0, RULE_contour = 1, RULE_syntax = 2, RULE_sentence_wrap = 3, 
		RULE_sentence = 4, RULE_sentence_assign = 5, RULE_idtf_lvl1_preffix = 6, 
		RULE_idtf_lvl1_value = 7, RULE_idtf_lvl1 = 8, RULE_idtf_system = 9, RULE_idtf_edge = 10, 
		RULE_idtf_set = 11, RULE_idtf_common = 12, RULE_idtf_list = 13, RULE_internal_sentence = 14, 
		RULE_internal_sentence_list = 15, RULE_sentence_lvl1 = 16, RULE_sentence_lvl_common = 17, 
		RULE_attr_list = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"content", "contour", "syntax", "sentence_wrap", "sentence", "sentence_assign", 
			"idtf_lvl1_preffix", "idtf_lvl1_value", "idtf_lvl1", "idtf_system", "idtf_edge", 
			"idtf_set", "idtf_common", "idtf_list", "internal_sentence", "internal_sentence_list", 
			"sentence_lvl1", "sentence_lvl_common", "attr_list"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'_'", "'['", "']'", "'[*'", "'*]'", "';;'", "'='", "'sc_node'", 
			"'sc_link'", "'sc_edge_dcommon'", "'sc_edge_ucommon'", "'sc_edge_main'", 
			"'sc_edge_access'", "'#'", "'...'", "'('", "')'", "'{'", "';'", "'}'", 
			"'(*'", "'*)'", "'|'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"ID_SYSTEM", "LINK", "CONNECTOR", "EDGE_ATTR", "LINE_TERMINATOR", "LINE_COMMENT", 
			"MULTINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "scs.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public scsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ContentContext extends ParserRuleContext {
		public Token r;
		public ContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_content; }
	}

	public final ContentContext content() throws RecognitionException {
		ContentContext _localctx = new ContentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_content);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(38);
				match(T__0);
				}
			}

			setState(41);
			((ContentContext)_localctx).r = match(T__1);
			setState(49);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(45);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case T__0:
					case T__3:
					case T__4:
					case T__5:
					case T__6:
					case T__7:
					case T__8:
					case T__9:
					case T__10:
					case T__11:
					case T__12:
					case T__13:
					case T__14:
					case T__15:
					case T__16:
					case T__17:
					case T__18:
					case T__19:
					case T__20:
					case T__21:
					case T__22:
					case ID_SYSTEM:
					case LINK:
					case CONNECTOR:
					case EDGE_ATTR:
					case LINE_TERMINATOR:
					case LINE_COMMENT:
					case MULTINE_COMMENT:
					case WS:
						{
						setState(42);
						_la = _input.LA(1);
						if ( _la <= 0 || (_la==T__1 || _la==T__2) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
						break;
					case T__1:
						{
						setState(43);
						match(T__1);
						}
						break;
					case T__2:
						{
						setState(44);
						match(T__2);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					} 
				}
				setState(51);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContourContext extends ParserRuleContext {
		public Token b;
		public Token e;
		public List<Sentence_wrapContext> sentence_wrap() {
			return getRuleContexts(Sentence_wrapContext.class);
		}
		public Sentence_wrapContext sentence_wrap(int i) {
			return getRuleContext(Sentence_wrapContext.class,i);
		}
		public ContourContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contour; }
	}

	public final ContourContext contour() throws RecognitionException {
		ContourContext _localctx = new ContourContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_contour);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(52);
				match(T__0);
				}
			}

			setState(55);
			((ContourContext)_localctx).b = match(T__3);
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__3) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__14) | (1L << T__15) | (1L << T__17) | (1L << ID_SYSTEM) | (1L << LINK))) != 0)) {
				{
				{
				setState(56);
				sentence_wrap();
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(62);
			((ContourContext)_localctx).e = match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SyntaxContext extends ParserRuleContext {
		public List<Sentence_wrapContext> sentence_wrap() {
			return getRuleContexts(Sentence_wrapContext.class);
		}
		public Sentence_wrapContext sentence_wrap(int i) {
			return getRuleContext(Sentence_wrapContext.class,i);
		}
		public SyntaxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_syntax; }
	}

	public final SyntaxContext syntax() throws RecognitionException {
		SyntaxContext _localctx = new SyntaxContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_syntax);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__3) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__14) | (1L << T__15) | (1L << T__17) | (1L << ID_SYSTEM) | (1L << LINK))) != 0)) {
				{
				{
				setState(64);
				sentence_wrap();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sentence_wrapContext extends ParserRuleContext {
		public SentenceContext sentence() {
			return getRuleContext(SentenceContext.class,0);
		}
		public Sentence_wrapContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence_wrap; }
	}

	public final Sentence_wrapContext sentence_wrap() throws RecognitionException {
		Sentence_wrapContext _localctx = new Sentence_wrapContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sentence_wrap);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(70);
			sentence();
			setState(71);
			match(T__5);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public Sentence_lvl1Context sentence_lvl1() {
			return getRuleContext(Sentence_lvl1Context.class,0);
		}
		public Sentence_lvl_commonContext sentence_lvl_common() {
			return getRuleContext(Sentence_lvl_commonContext.class,0);
		}
		public Sentence_assignContext sentence_assign() {
			return getRuleContext(Sentence_assignContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sentence);
		try {
			setState(76);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				sentence_lvl1();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				sentence_lvl_common();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(75);
				sentence_assign();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sentence_assignContext extends ParserRuleContext {
		public TerminalNode ID_SYSTEM() { return getToken(scsParser.ID_SYSTEM, 0); }
		public Idtf_commonContext idtf_common() {
			return getRuleContext(Idtf_commonContext.class,0);
		}
		public Sentence_assignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence_assign; }
	}

	public final Sentence_assignContext sentence_assign() throws RecognitionException {
		Sentence_assignContext _localctx = new Sentence_assignContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sentence_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(ID_SYSTEM);
			setState(79);
			match(T__6);
			setState(80);
			idtf_common();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Idtf_lvl1_preffixContext extends ParserRuleContext {
		public Idtf_lvl1_preffixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idtf_lvl1_preffix; }
	}

	public final Idtf_lvl1_preffixContext idtf_lvl1_preffix() throws RecognitionException {
		Idtf_lvl1_preffixContext _localctx = new Idtf_lvl1_preffixContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_idtf_lvl1_preffix);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Idtf_lvl1_valueContext extends ParserRuleContext {
		public Idtf_systemContext idtf_system() {
			return getRuleContext(Idtf_systemContext.class,0);
		}
		public Idtf_lvl1_preffixContext idtf_lvl1_preffix() {
			return getRuleContext(Idtf_lvl1_preffixContext.class,0);
		}
		public Idtf_lvl1_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idtf_lvl1_value; }
	}

	public final Idtf_lvl1_valueContext idtf_lvl1_value() throws RecognitionException {
		Idtf_lvl1_valueContext _localctx = new Idtf_lvl1_valueContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_idtf_lvl1_value);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12))) != 0)) {
				{
				setState(84);
				idtf_lvl1_preffix();
				setState(85);
				match(T__13);
				}
			}

			setState(89);
			idtf_system();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Idtf_lvl1Context extends ParserRuleContext {
		public Idtf_lvl1_valueContext idtf_lvl1_value() {
			return getRuleContext(Idtf_lvl1_valueContext.class,0);
		}
		public TerminalNode LINK() { return getToken(scsParser.LINK, 0); }
		public Idtf_lvl1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idtf_lvl1; }
	}

	public final Idtf_lvl1Context idtf_lvl1() throws RecognitionException {
		Idtf_lvl1Context _localctx = new Idtf_lvl1Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_idtf_lvl1);
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
			case T__8:
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__14:
			case ID_SYSTEM:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				idtf_lvl1_value();
				}
				break;
			case LINK:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				match(LINK);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Idtf_systemContext extends ParserRuleContext {
		public TerminalNode ID_SYSTEM() { return getToken(scsParser.ID_SYSTEM, 0); }
		public Idtf_systemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idtf_system; }
	}

	public final Idtf_systemContext idtf_system() throws RecognitionException {
		Idtf_systemContext _localctx = new Idtf_systemContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_idtf_system);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_la = _input.LA(1);
			if ( !(_la==T__14 || _la==ID_SYSTEM) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Idtf_edgeContext extends ParserRuleContext {
		public List<Idtf_systemContext> idtf_system() {
			return getRuleContexts(Idtf_systemContext.class);
		}
		public Idtf_systemContext idtf_system(int i) {
			return getRuleContext(Idtf_systemContext.class,i);
		}
		public TerminalNode CONNECTOR() { return getToken(scsParser.CONNECTOR, 0); }
		public Attr_listContext attr_list() {
			return getRuleContext(Attr_listContext.class,0);
		}
		public Idtf_edgeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idtf_edge; }
	}

	public final Idtf_edgeContext idtf_edge() throws RecognitionException {
		Idtf_edgeContext _localctx = new Idtf_edgeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_idtf_edge);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(T__15);
			setState(98);
			idtf_system();
			setState(99);
			match(CONNECTOR);
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(100);
				attr_list();
				}
				break;
			}
			setState(103);
			idtf_system();
			setState(104);
			match(T__16);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Idtf_setContext extends ParserRuleContext {
		public List<Idtf_commonContext> idtf_common() {
			return getRuleContexts(Idtf_commonContext.class);
		}
		public Idtf_commonContext idtf_common(int i) {
			return getRuleContext(Idtf_commonContext.class,i);
		}
		public List<Attr_listContext> attr_list() {
			return getRuleContexts(Attr_listContext.class);
		}
		public Attr_listContext attr_list(int i) {
			return getRuleContext(Attr_listContext.class,i);
		}
		public Idtf_setContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idtf_set; }
	}

	public final Idtf_setContext idtf_set() throws RecognitionException {
		Idtf_setContext _localctx = new Idtf_setContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_idtf_set);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(T__17);
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(107);
				attr_list();
				}
				break;
			}
			setState(110);
			idtf_common();
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__18) {
				{
				{
				setState(111);
				match(T__18);
				setState(113);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
				case 1:
					{
					setState(112);
					attr_list();
					}
					break;
				}
				setState(115);
				idtf_common();
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121);
			match(T__19);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Idtf_commonContext extends ParserRuleContext {
		public Idtf_systemContext idtf_system() {
			return getRuleContext(Idtf_systemContext.class,0);
		}
		public Idtf_edgeContext idtf_edge() {
			return getRuleContext(Idtf_edgeContext.class,0);
		}
		public Idtf_setContext idtf_set() {
			return getRuleContext(Idtf_setContext.class,0);
		}
		public ContourContext contour() {
			return getRuleContext(ContourContext.class,0);
		}
		public ContentContext content() {
			return getRuleContext(ContentContext.class,0);
		}
		public TerminalNode LINK() { return getToken(scsParser.LINK, 0); }
		public Idtf_commonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idtf_common; }
	}

	public final Idtf_commonContext idtf_common() throws RecognitionException {
		Idtf_commonContext _localctx = new Idtf_commonContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_idtf_common);
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				idtf_system();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				idtf_edge();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(125);
				idtf_set();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(126);
				contour();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(127);
				content();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(128);
				match(LINK);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Idtf_listContext extends ParserRuleContext {
		public List<Idtf_commonContext> idtf_common() {
			return getRuleContexts(Idtf_commonContext.class);
		}
		public Idtf_commonContext idtf_common(int i) {
			return getRuleContext(Idtf_commonContext.class,i);
		}
		public List<Internal_sentence_listContext> internal_sentence_list() {
			return getRuleContexts(Internal_sentence_listContext.class);
		}
		public Internal_sentence_listContext internal_sentence_list(int i) {
			return getRuleContext(Internal_sentence_listContext.class,i);
		}
		public Idtf_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idtf_list; }
	}

	public final Idtf_listContext idtf_list() throws RecognitionException {
		Idtf_listContext _localctx = new Idtf_listContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_idtf_list);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			idtf_common();
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__20) {
				{
				setState(132);
				internal_sentence_list();
				}
			}

			setState(142);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(135);
					match(T__18);
					setState(136);
					idtf_common();
					setState(138);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__20) {
						{
						setState(137);
						internal_sentence_list();
						}
					}

					}
					} 
				}
				setState(144);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Internal_sentenceContext extends ParserRuleContext {
		public TerminalNode CONNECTOR() { return getToken(scsParser.CONNECTOR, 0); }
		public Idtf_listContext idtf_list() {
			return getRuleContext(Idtf_listContext.class,0);
		}
		public Attr_listContext attr_list() {
			return getRuleContext(Attr_listContext.class,0);
		}
		public Internal_sentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_internal_sentence; }
	}

	public final Internal_sentenceContext internal_sentence() throws RecognitionException {
		Internal_sentenceContext _localctx = new Internal_sentenceContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_internal_sentence);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(CONNECTOR);
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				{
				setState(146);
				attr_list();
				}
				break;
			}
			setState(149);
			idtf_list();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Internal_sentence_listContext extends ParserRuleContext {
		public List<Internal_sentenceContext> internal_sentence() {
			return getRuleContexts(Internal_sentenceContext.class);
		}
		public Internal_sentenceContext internal_sentence(int i) {
			return getRuleContext(Internal_sentenceContext.class,i);
		}
		public Internal_sentence_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_internal_sentence_list; }
	}
